inline style was removed from svg icon directive

--- a/src/core/main.scss
+++ b/src/core/main.scss
@@ -1,1 +1,2 @@
-@import '../components/scroll/znk-scroll-directive';
+@import '../components/scroll/znk-scroll-directive',
+  '../components/svgIcon/_svg-icon';
