--- a/src/core/main.scss
+++ b/src/core/main.scss
@@ -1,2 +1,3 @@
 @import '../components/scroll/znk-scroll-directive',
-  '../components/svgIcon/_svg-icon';
+        '../components/svgIcon/_svg-icon',
+        '../components/znkExercise/scss/znk-exercise-drv-desktop';
