--- a/src/components/znkExercise/btnSection/template/btnSectionDesktopTemplate.html
+++ b/src/components/znkExercise/btnSection/template/btnSectionDesktopTemplate.html
@@ -1,6 +1,6 @@
 <div class="btn-container left-container">
     <button>
-        <!--<svg-icon></svg-icon>-->
+        <svg-icon name="chevron"></svg-icon>
     </button>
 </div>
 <div class="btn-container right-container">
