--- a/src/components/znkExercise/core/template/znkExerciseDrv.html
+++ b/src/components/znkExercise/core/template/znkExerciseDrv.html
@@ -1,19 +1,18 @@
 <div ng-transclude></div>
-<!--<ion-slide-box znk-slide="settings.slideDirection" class="znk-carousel"-->
-               <!--show-pager="false"-->
-               <!--active-slide="d.currentSlide">-->
-    <!--<question-builder slide-repeat-drv="question in d.questionsWithAnswers"-->
-         <!--active-slide="d.currentSlide"-->
-         <!--question="question"-->
-         <!--ng-model="question.__questionStatus.userAnswer"-->
-         <!--ng-change="d.questionAnswered(question)">-->
-    <!--</question-builder>-->
-<!--</ion-slide-box>-->
+<template-by-platform class="znk-carousel"
+                      prefix="components/znkExercise/questionSwiper/template"
+                        mobile-temp="">
+    <question-builder slide-repeat-drv="question in d.questionsWithAnswers"
+         active-slide="d.currentSlide"
+         question="question"
+         ng-model="question.__questionStatus.userAnswer"
+         ng-change="d.questionAnswered(question)">
+    </question-builder>
+</template-by-platform>
 <template-by-platform class="btn-section"
                       prefix="components/znkExercise/btnSection/template"
                       mobile-temp="btnSectionMobileTemplate.html"
                       desktop-temp="btnSectionDesktopTemplate.html">
-
 </template-by-platform>
 <znk-exercise-pager
      ng-hide="d.hidePager"
