--- a/src/core/main.scss
+++ b/src/core/main.scss
@@ -1,3 +1,4 @@
 @import '../components/scroll/znk-scroll-directive',
         '../components/svgIcon/_svg-icon',
+        '../components/znkExercise/scss/znk-exercise',
         '../components/znkExercise/scss/znk-exercise-drv-desktop';
