--- a/src/components/znkExercise/btnSection/template/btnSectionDesktopTemplate.html
+++ b/src/components/znkExercise/btnSection/template/btnSectionDesktopTemplate.html
@@ -1,10 +1,10 @@
 <div class="btn-container left-container">
-    <button>
+    <button ng-click="">
         <svg-icon name="chevron"></svg-icon>
     </button>
 </div>
 <div class="btn-container right-container">
-    <button>
+    <button ng-click="d.next()">
         <svg-icon name="chevron"></svg-icon>
     </button>
 </div>
