--- a/src/components/znkExercise/core/template/btnSectionDesktopTemplate.html
+++ b/src/components/znkExercise/core/template/btnSectionDesktopTemplate.html
@@ -1,10 +1,11 @@
 <div class="btn-container left-container">
-    <button ng-click="">
+    <button ng-click="vm.prevQuestion()">
         <svg-icon name="chevron"></svg-icon>
     </button>
 </div>
 <div class="btn-container right-container">
-    <button ng-click="d.next()">
+    <button ng-click="vm.nextQuestion()">
         <svg-icon name="chevron"></svg-icon>
     </button>
 </div>
+<button class="done-btn ng-hide" ng-show="vm.showDoneButton">DONE</button>
