--- a/src/components/znkExercise/core/template/btnSectionDesktopTemplate.html
+++ b/src/components/znkExercise/core/template/btnSectionDesktopTemplate.html
@@ -1,9 +1,10 @@
-<div class="btn-container left-container">
+<div class="btn-container left-container ng-hide" ng-show="!!vm.currentQuestionIndex">
     <button ng-click="vm.prevQuestion()">
         <svg-icon name="chevron"></svg-icon>
     </button>
 </div>
-<div class="btn-container right-container">
+<div class="btn-container right-container ng-hide"
+     ng-show="vm.maxQuestionIndex !== vm.currentQuestionIndex">
     <button ng-click="vm.nextQuestion()">
         <svg-icon name="chevron"></svg-icon>
     </button>
