multi choice answer was added

--- a/src/components/znkExercise/scss/_select-answer-drv.scss
+++ b/src/components/znkExercise/scss/_select-answer-drv.scss
@@ -1,5 +1,6 @@
 select-answer{
     @include text-style(18px,$fcColor1,Lato);
+    display: block;
 
     .answer{
         @include display-flex();
