multi choice answer was added

--- a/src/components/znkExercise/core/template/questionSwiperDesktopTemplate.html
+++ b/src/components/znkExercise/core/template/questionSwiperDesktopTemplate.html
@@ -1,5 +1,6 @@
 <ul class="znk-carousel"
     rn-carousel
+    rn-carousel-buffered
     rn-carousel-index="d.currentSlide">
     <li class="slide"
         ng-repeat="question in d.questionsWithAnswers">
