--- a/src/components/znkExercise/core/template/znkExerciseDrv.html
+++ b/src/components/znkExercise/core/template/znkExerciseDrv.html
@@ -9,6 +9,6 @@
                           next-question="vm.setCurrentIndexByOffset(1)">
 </znk-exercise-btn-section>
 <znk-exercise-pager
-        ng-hide="d.hidePager"
-        questions="d.questionsWithAnswers">
+        ng-hide="vm.hidePager"
+        questions="vm.questionsWithAnswers">
 </znk-exercise-pager>
