--- a/src/components/znkExercise/core/template/btnSectionMobileTemplate.html
+++ b/src/components/znkExercise/core/template/btnSectionMobileTemplate.html
@@ -1,13 +1,13 @@
 <div ng-class="{ 'next-disabled' : settings.slideDirection === d.slideDirections.NONE ||  settings.slideDirection === d.slideDirections.RIGHT }">
     <div class="bookmark-icon-container only-tablet"
-         ng-class="d.questionsWithAnswers[d.currentSlide].__questionStatus.bookmark ? 'bookmark-active-icon' : 'bookmark-icon'"
-         ng-click="d.bookmarkCurrentQuestion()"
+         ng-class="vm.questionsWithAnswers[vm.currentSlide].__questionStatus.bookmark ? 'bookmark-active-icon' : 'bookmark-icon'"
+         ng-click="vm.bookmarkCurrentQuestion()"
          ng-hide="settings.viewMode === d.reviewModeId"
          analytics-on="click"
          analytics-event="click-bookmark-question"
          analytics-category="exercise"></div>
     <ng-switch
-            on="d.currentSlide !== d.questionsWithAnswers.length - 1 && d.answeredCount !== d.questionsWithAnswers.length"
+            on="vm.currentSlide !== vm.questionsWithAnswers.length - 1 && vm.answeredCount !== vm.questionsWithAnswers.length"
             ng-hide="settings.viewMode === d.reviewModeId"
             class="ng-hide"
             ng-click="d.next()">
