--- a/src/components/znkExercise/core/template/questionSwiperMobileTemplate.html
+++ b/src/components/znkExercise/core/template/questionSwiperMobileTemplate.html
@@ -1,9 +1,9 @@
 <ion-slide-box znk-slide="settings.slideDirection" class="znk-carousel"
                show-pager="false"
-               active-slide="d.currentSlide">
-    <question-builder slide-repeat-drv="question in d.questionsWithAnswers"
+               active-slide="vm.currentSlide">
+    <question-builder slide-repeat-drv="question in vm.questionsWithAnswers"
                       question="question"
                       ng-model="question.__questionStatus.userAnswer"
-                      ng-change="d.questionAnswered(question)">
+                      ng-change="vm.questionAnswered(question)">
     </question-builder>
 </ion-slide-box>
