--- a/src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
+++ b/src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
@@ -1,131 +1,149 @@
 @import "../../../../bower_components/angular-carousel/dist/angular-carousel";
 
 znk-exercise.desktop {
-  display: block;
-  position: relative;
+    display: block;
+    position: relative;
 
-  .btn-section {
-    .btn-container {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      display: inline-flex;
-      align-items: center;
+    .btn-section {
+        .btn-container {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            display: inline-flex;
+            align-items: center;
+            display: none;
 
-      &.right-container {
-        right: -40px;
+            &.right-container {
+                right: -40px;
 
-        button{
-          border-top-right-radius: 42px;
-          border-bottom-right-radius: 42px;
-          padding-left: 2px;
+                button {
+                    border-top-right-radius: 42px;
+                    border-bottom-right-radius: 42px;
+                    padding-left: 2px;
 
-          .chevron{
-            transform: rotate(-90deg);
-          }
+                    .chevron {
+                        transform: rotate(-90deg);
+                    }
+                }
+            }
+
+            &.left-container {
+                left: -40px;
+
+                button {
+                    border-top-left-radius: 42px;
+                    border-bottom-left-radius: 42px;
+                    padding-left: 5px;
+
+                    .chevron {
+                        transform: rotate(90deg);
+                    }
+                }
+            }
+
+            button {
+                height: 80px;
+                width: 40px;
+                background: #fbfafa;
+
+                &:focus {
+                    outline: none;
+                }
+
+                svg-icon.chevron {
+                    width: 33px;
+
+                    .st0 {
+                        stroke: #0a9bad;
+                    }
+                }
+            }
         }
-      }
 
-      &.left-container{
-        left: -40px;
-
-        button{
-          border-top-left-radius: 42px;
-          border-bottom-left-radius: 42px;
-          padding-left: 5px;
-
-          .chevron{
-            transform: rotate(90deg);
-          }
+        .done-btn {
+            width: 160px;
+            position: absolute;
+            right: 30px;
+            bottom: 10px;
+            height: 35px;
+            background: #ff931e;
+            font: {
+                family: Lato;
+                size: 13px;
+                weight: normal;
+            }
+            border: {
+                radius: 30px;
+            }
+            color: white;
         }
-      }
+    }
 
-      button {
-        height: 80px;
-        width: 40px;
-        background: #fbfafa;
+    &.direction-right{
+        .btn-section{
+            .btn-container.right-container{
+                display: block;
+            }
+        }
+    }
 
-        &:focus{
-          outline: none;
+    &.direction-left{
+        .btn-section{
+            .btn-container.left-container{
+                display: block;
+            }
+        }
+    }
+
+    svg-icon.chevron {
+        .st0 {
+            fill: none;
+            stroke: #231F20;
+            stroke-width: 12;
+            stroke-linecap: round;
+            stroke-linejoin: round;
+            stroke-miterlimit: 10;
+        }
+    }
+
+    template-by-platform {
+        &.znk-carousel-container {
+            display: flex;
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+
+            .znk-carousel {
+                flex-grow: 1;
+                margin: 0;
+
+                .slide {
+                    width: 100%;
+                    height: 100%;
+
+                    question-builder {
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+            }
+        }
+    }
+
+    button {
+        padding: 0;
+        border: {
+            top: none;
+            right: none;
+            bottom: none;
+            left: none;
         }
 
-        svg-icon.chevron{
-          width: 33px;
-
-          .st0{
-            stroke: #0a9bad;
-          }
+        &:focus {
+            outline: none;
         }
-      }
     }
 
-    .done-btn{
-      width: 160px;
-      position: absolute;
-      right: 30px;
-      bottom: 10px;
-      height: 35px;
-      background: #ff931e;
-      font: {
-        family: Lato;
-        size: 13px;
-        weight: normal;
-      }
-      border:{
-        radius: 30px;
-      }
-      color: white;
-    }
-  }
-
-  svg-icon.chevron {
-    .st0 {
-      fill: none;
-      stroke: #231F20;
-      stroke-width: 12;
-      stroke-linecap: round;
-      stroke-linejoin: round;
-      stroke-miterlimit: 10;
-    }
-  }
-
-  template-by-platform{
-    &.znk-carousel-container{
-      display: flex;
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-
-      .znk-carousel{
-        flex-grow: 1;
-        margin: 0;
-
-        .slide{
-          width: 100%;
-          height: 100%;
-
-          question-builder{
-            width: 100%;
-            height: 100%;
-          }
-        }
-      }
-    }
-  }
-
-  button {
-    padding: 0;
-    border:{
-      top: none;
-      right: none;
-      bottom: none;
-      left: none;
-    }
-
-    &:focus{
-      outline: none;
-    }
-  }
 }
