--- a/src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
+++ b/src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
@@ -105,7 +105,7 @@ znk-exercise.desktop {
         }
     }
 
-    template-by-platform {
+    questions-carousel {
         &.znk-carousel-container {
             display: flex;
             position: absolute;
