--- a/src/components/znkExercise/scss/_znk-exercise.scss
+++ b/src/components/znkExercise/scss/_znk-exercise.scss
@@ -1,13 +1,5 @@
 znk-exercise{
-  template-by-platform {
-    display: block;
-  }
-
-  question-builder{
-    display: block;
-  }
-
-  answer-builder{
+  question-builder, questions-carousel, answer-builder{
     display: block;
   }
 }
