--- a/src/components/znkExercise/core/template/btnSectionDesktopTemplate.html
+++ b/src/components/znkExercise/core/template/btnSectionDesktopTemplate.html
@@ -9,4 +9,4 @@
         <svg-icon name="chevron"></svg-icon>
     </button>
 </div>
-<button class="done-btn ng-hide" ng-show="vm.showDoneButton">DONE</button>
+<button class="done-btn ng-hide" ng-show="vm.showDoneButton" ng-click="onDone()">DONE</button>
