--- a/src/components/znkExercise/scss/_znk-exercise.scss
+++ b/src/components/znkExercise/scss/_znk-exercise.scss
@@ -1,3 +1,5 @@
+@import "../../../../bower_components/Swiper/dist/css/swiper";
+
 znk-exercise{
   question-builder, questions-carousel, answer-builder{
     display: block;
