--- a/src/components/znkExercise/core/template/questionSwiperDesktopTemplate.html
+++ b/src/components/znkExercise/core/template/questionSwiperDesktopTemplate.html
@@ -1,13 +1,12 @@
-<ul class="znk-carousel"
-    rn-carousel
-    rn-carousel-buffered
-    rn-carousel-index="currentSlide"
-    rn-carousel-locked="d.lock">
-    <li class="slide"
-        ng-repeat="question in questions">
+<znk-swiper class="znk-carousel"
+            ng-model="vm.currSlideIndex"
+            actions="vm.swiperActions"
+            ng-change="vm.SlideChanged()">
+    <div class="swiper-slide"
+        ng-repeat="question in vm.questions">
         <question-builder question="question"
                           ng-model="question.__questionStatus.userAnswer"
                           ng-change="onQuestionAnswered(question)">
         </question-builder>
-    </li>
-</ul>
+    </div>
+</znk-swiper>
