--- a/src/components/znkExercise/core/template/znkExerciseDrv.html
+++ b/src/components/znkExercise/core/template/znkExerciseDrv.html
@@ -2,7 +2,7 @@
 <questions-carousel class="znk-carousel-container"
                     questions="vm.questionsWithAnswers"
                     disable-swipe="{{vm.slideDirection !== 2}}"
-                    current-slide="vm.currentSlide"
+                    ng-model="vm.currentSlide"
                     on-question-answered="vm.questionAnswered()">
 </questions-carousel>
 <znk-exercise-btn-section class="btn-section"
