pop up srv was added

--- a/src/core/scss/imports/_colors.scss
+++ b/src/core/scss/imports/_colors.scss
@@ -4,6 +4,8 @@ $fcColor2: #fff;
 $fcColor3: #ff6766;
 $fcColor4: #2AB79E;
 $fcColor5: #0a9bad;
+$fcColor6: #4f4d4d;
+$fcColor7: #87ca4d;
 
 //background color
 $bgColor1: #ff6766;
@@ -17,6 +19,8 @@ $bgColor6: #fff;
 $bcColor1: #87ca4d;
 $bcColor2: #0a9bad;
 
+//background with transparency
+$tbgColor1: rgba(0,0,0,0.7);
 
 /*
 //backgrounds
