--- a/src/core/scss/main.scss
+++ b/src/core/scss/main.scss
@@ -7,4 +7,5 @@
         '../../components/znkExercise/scss/znk-exercise',
         '../../components/znkExercise/scss/znk-exercise-drv-desktop',
         '../../components/znkExercise/scss/select-answer-drv',
+        '../../components/znkExercise/scss/rate-answer-drv',
         '../../components/popUp/popup';
