--- a/src/core/scss/imports/_colors.scss
+++ b/src/core/scss/imports/_colors.scss
@@ -6,6 +6,7 @@ $fcColor4: #2AB79E;
 $fcColor5: #0a9bad;
 $fcColor6: #4f4d4d;
 $fcColor7: #87ca4d;
+$fcColor8: #b7b7b7;
 
 //background color
 $bgColor1: #ff6766;
@@ -14,6 +15,11 @@ $bgColor3: #0a9bad;
 $bgColor4: #f6f6f6;
 $bgColor5: #888888;
 $bgColor6: #fff;
+$bgColor7: #e8e7e7;
+$bgColor8: #f7f6f6;
+$bgColor9: #e9ebe8;
+$bgColor10: #87ca4d;
+
 
 //border color
 $bcColor1: #87ca4d;
@@ -21,6 +27,8 @@ $bcColor2: #0a9bad;
 
 //background with transparency
 $tbgColor1: rgba(0,0,0,0.7);
+
+//fonts
 
 /*
 //backgrounds
