--- a/src/core/scss/imports/_colors.scss
+++ b/src/core/scss/imports/_colors.scss
@@ -17,9 +17,8 @@ $bgColor5: #888888;
 $bgColor6: #fff;
 $bgColor7: #e8e7e7;
 $bgColor8: #f7f6f6;
-$bgColor9: #e9ebe8;
+$bgColor9: #e8e7e7;
 $bgColor10: #87ca4d;
-
 
 //border color
 $bcColor1: #87ca4d;
@@ -27,8 +26,6 @@ $bcColor2: #0a9bad;
 
 //background with transparency
 $tbgColor1: rgba(0,0,0,0.7);
-
-//fonts
 
 /*
 //backgrounds
