--- a/src/components/znkExercise/answerTypes/templates/rateAnswerDrv.html
+++ b/src/components/znkExercise/answerTypes/templates/rateAnswerDrv.html
@@ -2,9 +2,11 @@
 
     <div class="checkbox-items-wrapper" >
 
-        <div class="item-repeater" ng-repeat="answer in ::d.answers track by answer.id">
-            <div class="checkbox-item" ng-click="clickHandler(answer, $index)">
-                <div class="item-index">{{ ::$index  }}</div>
+        <div class="item-repeater" ng-repeat="item in ::d.itemsArray track by $index">
+            <svg-icon class="correct-icon" name="correct"></svg-icon>
+            <svg-icon class="wrong-icon" name="wrong"></svg-icon>
+            <div class="checkbox-item" ng-click="clickHandler($index)">
+                <div class="item-index">{{ ::($index + 2)}}</div>
             </div>
             <div class="correct-answer-line"></div>
         </div>
