--- a/src/components/znkExercise/core/template/znkExerciseDrv.html
+++ b/src/components/znkExercise/core/template/znkExerciseDrv.html
@@ -13,5 +13,6 @@
 </znk-exercise-btn-section>
 <znk-exercise-pager
         ng-hide="vm.hidePager"
-        questions="vm.questionsWithAnswers">
+        questions="vm.questionsWithAnswers"
+        ng-model="vm.currentSlide">
 </znk-exercise-pager>
