--- a/src/core/scss/imports/_colors.scss
+++ b/src/core/scss/imports/_colors.scss
@@ -14,10 +14,15 @@ $bgColor3: #0a9bad;
 $bgColor4: #f6f6f6;
 $bgColor5: #888888;
 $bgColor6: #fff;
+$bgColor7: #f5f8fa;
+$bgColor8: #e55958;
+$bgColor9: #80c248;
 
 //border color
 $bcColor1: #87ca4d;
 $bcColor2: #0a9bad;
+$bcColor3: #CFCFCF;
+$bcColor4: #ff6766;
 
 //background with transparency
 $tbgColor1: rgba(0,0,0,0.7);
