pager was added

--- a/src/components/scroll/_znk-scroll-directive.scss
+++ b/src/components/scroll/_znk-scroll-directive.scss
@@ -1,4 +1,5 @@
-znk-scroll{
-  display: block;
-  overflow: hidden;
+znk-scroll {
+    display: block;
+    overflow: hidden;
+    position: relative;
 }
