--- a/src/components/znkExercise/core/template/znkExercisePagerDrv.html
+++ b/src/components/znkExercise/core/template/znkExercisePagerDrv.html
@@ -1,6 +1,6 @@
 <znk-scroll>
-    <div>
-        <div class="pager-item question-status-indicator-wrapper"
+    <div class="pager-items-wrapper">
+        <div class="pager-item"
              ng-repeat="question in questions track by question.id"
              question-status="question.__questionStatus"
              question="question"
