fixing select answer

--- a/src/components/znkExercise/answerTypes/templates/selectAnswerDrv.html
+++ b/src/components/znkExercise/answerTypes/templates/selectAnswerDrv.html
@@ -4,5 +4,7 @@
             <span class="index-char">{{::d.getIndexChar($index)}}</span>
         </div>
         <markup content="answer.content" type="md" class="content"></markup>
+        <svg-icon class="correct-icon-drv" name="correct"></svg-icon>
+        <svg-icon class="wrong-icon-drv" name="wrong"></svg-icon>
     </div>
 </div>
