- added wrapper to znkExercise done-btn - added class to indicate if pager is shown

--- a/src/components/znkExercise/core/template/btnSectionDesktopTemplate.html
+++ b/src/components/znkExercise/core/template/btnSectionDesktopTemplate.html
@@ -9,4 +9,6 @@
         <svg-icon name="chevron"></svg-icon>
     </button>
 </div>
-<button class="done-btn ng-hide" ng-show="vm.showDoneButton" ng-click="onDone()">DONE</button>
+<div class="done-btn-wrap">
+    <button class="done-btn ng-hide" ng-show="vm.showDoneButton" ng-click="onDone()">DONE</button>
+</div>
