add timer svg icon

--- a/src/components/general/templates/timerDrv.html
+++ b/src/components/general/templates/timerDrv.html
@@ -1,6 +1,6 @@
 <div ng-switch="type" class="timer-drv">
     <div ng-switch-when="1" class="timer-type1">
-        <i class="ion-android-stopwatch"></i>
+        <svg-icon class="icon-wrapper" name="clock-icon"></svg-icon>
         <div class="timer-view"></div>
     </div>
     <div ng-switch-when="2" class="timer-type2">
