--- a/src/components/znkExercise/core/template/btnSectionDesktopTemplate.html
+++ b/src/components/znkExercise/core/template/btnSectionDesktopTemplate.html
@@ -4,11 +4,15 @@
     </button>
 </div>
 <div class="btn-container right-container ng-hide"
-     ng-show="vm.maxQuestionIndex !== vm.currentQuestionIndex">
+     ng-show="vm.maxQuestionIndex !== vm.currentQuestionIndex"
+     ng-class="{'question-answered': vm.isCurrentQuestionAnswered}">
     <button ng-click="vm.nextQuestion()">
         <svg-icon name="chevron"></svg-icon>
     </button>
 </div>
 <div class="done-btn-wrap">
-    <button class="done-btn ng-hide" ng-show="vm.showDoneButton" ng-click="onDone()">DONE</button>
+    <button class="done-btn ng-hide"
+            ng-show="vm.showDoneButton"
+            ng-click="onDone()">DONE
+    </button>
 </div>
