--- a/src/components/znkExercise/scss/_znk-exercise-pager-drv.scss
+++ b/src/components/znkExercise/scss/_znk-exercise-pager-drv.scss
@@ -1,12 +1,11 @@
 znk-exercise-pager {
-    //height: 44px;
+    height: 57px;
     background: $bgColor10;
     box-sizing: border-box;
-    display: block;
-    @include absolute-position(null, 27px, 7px, 27px);
-    z-index: 1;
+    @include absolute-position(0, 0, 0, 0);
     overflow: hidden;
     border-radius: 30px;
+    z-index: 1;
 
     znk-scroll {
         display: flex;
