--- a/src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
+++ b/src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
@@ -1,3 +1,27 @@
+
+//znk-exercise-btn-section {
+//    .done-btn-wrap {
+//        width: 100%;
+//        height: 57px;
+//        position: absolute;
+//        right: 0;
+//        bottom: 0;
+//        box-shadow: 0px -4px 10px 0.1px $bsColor6;
+//        z-index:2;
+//        .done-btn {
+//            position: static;
+//            top: auto;
+//            right: auto;
+//            left: auto;
+//            bottom: auto;
+//            margin: 10px;
+//            float:right;
+//        }
+//    }
+//}
+
+
+
 znk-exercise.desktop {
     display: block;
     position: relative;
